--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for Perinci-Declare
 
-0.00     2014-07-05 (SHARYANTO) (not yet released)
+0.00     2014-07-05 (SHARYANTO)
 
          - First release, not yet implemented.
