[dist] Update release note style in Changes

--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-0.01    2015-09-03 (PERLANCAR)
+0.01    2015-09-03  Released-By: PERLANCAR
 
 	- No functional changes.
 
@@ -7,6 +7,6 @@
 	  requirement.
 
 
-0.00     2014-07-05 (SHARYANTO)
+0.00     2014-07-05  Released-By: SHARYANTO
 
          - First release, not yet implemented.
